| Summary: | ASTERISK-26267: ast_register_atexit callbacks should be run on failed startup. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2016-08-03 21:57:17 | Date Closed: | 2016-08-12 13:12:42 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 11.23.0 13.10.0 14.0.0-beta1 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When an initialization procedure fails during startup it results in a call to {{exit(1)}} or {{exit(2)}}. A failed startup needs to result in a call to {{ast_run_atexits(0)}} to handle the mandatory cleanup. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-03 21:57:17.503-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||